--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 pluginManagement {
 	repositories {
+		maven {url 'https://maven.aliyun.com/repository/central'}
+		maven {url 'https://maven.aliyun.com/repository/public'}
 		mavenCentral()
 		gradlePluginPortal()
 		if (version.endsWith('-SNAPSHOT')) {
